# actix-ai

./: .gitignore  Cargo.toml
src/: core.rs  main.rs
src/adapters/: controllers.rs  gemini.rs  mod.rs
src/core/: entities.rs  port.rs  usecase.rs
