[package]
name = "actix-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.21", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.83"
reqwest = { version = "0.12.12", features = ["json"] }
